--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
     "deep-freeze": "^0.0.1",
     "enzyme": "^2.8.2",
     "lodash": "^4.17.4",
